- improved debug output for property-based filters
- not a code change, but: I have checked all exit()s to make sure that
  none occurs once rsyslogd has started up. Even in unusual conditions
  (like low-memory conditions) rsyslogd somehow remains active. Of course,
  it might loose a message or two, but at least it does not abort and it
  can also recover when the condition no longer persist.
---------------------------------------------------------------------------
Version 1.11.1 (RGer), 2005-10-19
- support for BSD-style program name and host blocks
- added a new property "programname" that can be used in templates
- added ability to specify listen port for rfc3195d
- fixed a bug that rendered the "startswith" comparison operation
  unusable.
- changed more functions to "static" storage class to help compiler
  optimize (should have been static in the first place...)
- fixed a potential memory leak in the string buffer class destructor.
  As the destructur was previously never called, the leak did not actually
  appear.
- some internal restructuring in anticipation/preparation of minimal
  multi-threading support
- rsyslogd still shares some code with the sysklogd project. Some patches
  for this shared code have been brought over from the sysklogd CVS.
---------------------------------------------------------------------------
Version 1.11.0 (RGer), 2005-10-12
- support for receiving messages via RFC 3195; added rfc3195d for that
  purpose
- added an additional guard to prevent rsyslogd from aborting when the
  2gb file size limit is hit. While a user can configure rsyslogd to
  handle such situations, it would abort if that was not done AND large
  file support was not enabled (ok, this is hopefully an unlikely scenario)
- fixed a bug that caused additional Unix domain sockets to be incorrectly
  processed - could lead to message loss in extreme cases
---------------------------------------------------------------------------