@@ -33,6 +33,9 @@ FEATURE_REGEXP=1
 # Enable RFC 3195 support (REQUIRES LIBLOGGING 0.6.0 or above!)
 FEATURE_RFC3195=1
 
+# Enable multithreading via pthreads (very experimental!)
+FEATURE_PTHREADS=1
+
 # Enable debug mode (much slower code)
 FEATURE_DEBUG=1
 
@@ -66,6 +69,10 @@ endif
 
 ifeq ($(strip $(FEATURE_REGEXP)), 1)
   F_REGEXP=-DFEATURE_REGEXP
+endif
+
+ifeq ($(strip $(FEATURE_PTHREADS)), 1)
+  F_PTHREADS=-DUSE_PTHREADS
 endif
 
 ifeq ($(strip $(FEATURE_RFC3195)), 1)
